# custody

./: .coverage  .flake8  .gitignore  .yamllint  PR_DESCRIPTION.md  README.fr.md  README.md  README_CONFIG_GARDE.fr.md  README_CONFIG_GARDE.md  README_CONFIG_VACANCES.md  README_ENTITES.md  be_2026.json  hacs.json  pyproject.toml  requirements_test.txt  test_debug_dates.py  test_logic_verification.md  test_next_dates.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  create-release-v1.0.0.yml  create-release.yml  promote-to-official.yml  tag.yml
custom_components/custody_schedule/: __init__.py  binary_sensor.py  calendar.py  config_flow.py  const.py  device_tracker.py  holiday_bridge.py  intent.py  manifest.json  schedule.py  school_holidays.py  sensor.py  services.yaml  strings.json
custom_components/custody_schedule/translations/: en.json  fr.json
scripts/: check.sh  test_holiday_providers.py  update_version.py
tests/: test_custody_logic.py  test_schedule_bridges.py  test_structure.py
tests/mock_ha/homeassistant/helpers/aiohttp_client/: __init__.py
