[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custody_schedule"
version = "0.1.0"
description = "Home Assistant custom component for managing child custody schedules"
readme = "README.md"
requires-python = ">=3.10.0"
license = {text = "MIT"}
dependencies = [
    "homeassistant>=2023.1.0",
    "voluptuous>=0.13.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.MASTER]
ignore = ["CVS"]
persistent = "yes"
load-plugins = []
jobs = 2
unsafe-load-any-extension = "no"
extension-pkg-whitelist = []
optimize-ast = "no"

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.REPORTS]
output-format = "text"
files-output = "no"
reports = "yes"
evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"

[tool.pylint.BASIC]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "ev"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
name-group = []
include-naming-hint = "no"
function-rgx = "[a-z_][a-z0-9_]{2,30}$"
function-name-hint = "[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "[a-z_][a-z0-9_]{2,30}$"
variable-name-hint = "[a-z_][a-z0-9_]{2,30}$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
const-name-hint = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
attr-name-hint = "[a-z_][a-z0-9_]{2,30}$"
argument-rgx = "[a-z_][a-z0-9_]{2,30}$"
argument-name-hint = "[a-z_][a-z0-9_]{2,30}$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
class-name-hint = "[A-Z_][a-zA-Z0-9]+$"
inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
inlinevar-name-hint = "[A-Za-z_][A-Za-z0-9_]*$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
class-attribute-name-hint = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"